--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
    <head>
-
    </head>
-   <body>
+   <body style="background-color:aquamarine;">
         <h2 style="border: solid black; color:blueviolet">Flat earth enjoyer</h2>
    </body> 
 </html>
