added color shit

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
    <head>
    </head>
    <body style="background-color:aquamarine;">
-        <h2 style="border: solid black; color:blueviolet">Flat earth enjoyer</h2>
+        <h2 style="border: solid black; color:blueviolet">Flat earth enjoyer 🥹</h2>
    </body> 
 </html>
