Made some transition

--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html>
    <head>
+      <link rel="stylesheet" href="index.css">
    </head>
    <body style="background-color:aquamarine;">
-        <h2 style="border: solid black; color:blueviolet">Flat earth enjoyer 🥹</h2>
+      <div class="Gods-Word">
+         <h2 id="Brat"> Make Earth Flat Again  </h2>
+         <!-- <a href="https://matias.ma/nsfw/">Here's The Evidence</a> -->
+         <a href="https://matias.ma/nsfw/">
+            <span class="replies">Here's The Evidence</span>
+            <span class="comment">Are You For Real ?</span>
+         </a>
+      </div>  
    </body> 
 </html>
